# ansible-role-minio

./: .ansible-lint  .gitignore  .yamllint  Makefile  README.md  ansible.cfg  pyproject.toml
.github/workflows/: ci.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/cluster/: converge.yml  molecule.yml
molecule/cluster/certificates/: readme
molecule/cluster/tasks/: generate_selfsigned_cert.yml
molecule/default/: converge.yml  molecule.yml
molecule/site-replication/: converge.yml  molecule.yml
molecule/tls/: converge.yml  generate_selfsigned_cert.yml  molecule.yml
molecule/tls/tasks/: generate_selfsigned_cert.yml
tasks/: configure_client.yml  configure_server.yml  configure_site_replication.yml  create_minio_bucket.yml  create_minio_buckets.yml  create_minio_user.yml  create_prometheus_bearer_token.yml  install_client.yml  install_server.yml  main.yml
templates/: minio.env.j2  minio.service.j2  minio_policy.json.j2
